--- a/Campaign Conversion/README
+++ b/Campaign Conversion/README
@@ -1,1 +1,1 @@
-sd
+A Portuguese bank contacted customers over phone as a marketing effort to convince them to subscribe for a term deposit. The task is to predict whether a customer subscribes to the term deposit or not given 20 input features. 
